Fix swagger and Api
